pkgs/typed-racket-pkgs/typed-racket-tests/tests/typed-racket/fail/for-multiple-annotations.rkt
#;
(exn-pred "bad syntax")
#lang typed/racket/base

(for: : Void : Void ((i 5))
  (displayln i))
